--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
 <IfModule mod_rewrite.c>
+php_flag log_errors on
+php_value error_log errors.log
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
